# quickdiff

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  HOMEBREW_SETUP.md  LICENSE  PLAN.md  README.md  clippy.toml  deny.toml  install.sh  rustfmt.toml  slop-scan.config.json
.cargo/: config.toml
.github/workflows/: lint.yml  release.yml  update-homebrew.yml
benches/: diff_bench.rs  fixtures.rs  highlight_bench.rs  render_bench.rs
docs/: rust-lint-policy.md
plans/: 2025-01-13-rust-patterns-improvements.md  2025-01-14-pr-review-support.md  2025-12-25-open-at-first-hunk.md  2025-12-27-production-readiness.md  2026-01-17-web-stdin-pager.md  2026-04-10-slop-remediation.md  quickdiff-improvements-detailed.md  quickdiff-improvements.md
scripts/: lint.sh  web_render.ts
src/: lib.rs  main.rs  metrics.rs  prelude.rs
src/cli/: comments.rs  mod.rs
src/core/: comments.rs  comments_store.rs  config.rs  diff.rs  fuzzy.rs  gh.rs  mod.rs  pr_diff.rs  repo.rs  stdin_input.rs  text.rs  viewed.rs  watcher.rs
src/highlight/: mod.rs
src/theme/: mod.rs
src/ui/: app.rs  input.rs  mod.rs  render.rs  windowing.rs  worker.rs
src/ui/app/: comments.rs  diff.rs  external.rs  filter.rs  mod.rs  navigation.rs  patch.rs  pr.rs  state.rs  theme.rs  watcher.rs  worker_state.rs
src/ui/render/: bars.rs  diff.rs  helpers.rs  mod.rs  overlays.rs  sidebar.rs
src/web/: mod.rs
tests/: git_integration.rs  large_file.rs  ui_app.rs
thoughts/shared/plans/: 2025-12-18-diff-hunk-comments.md
web/: template.html
