[package]
name = "quickdiff"
version = "0.7.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# UI
ratatui = "0.29"
crossterm = "0.28"

# Diff
similar = "2.6"

# Highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
streaming-iterator = "0.1"
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }

# Persistence
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Fuzzy matching
nucleo-matcher = "0.3"
dirs = "6.0.0"
parking_lot = "0.12.5"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

[features]
default = ["lang-rust", "lang-typescript"]
lang-rust = ["dep:tree-sitter-rust"]
lang-typescript = ["dep:tree-sitter-typescript"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1.8.0"

[[bench]]
name = "diff_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
