[package]
name = "quickdiff"
version = "0.7.5"
edition = "2021"
rust-version = "1.75"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# UI
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
shell-words = "1.1"

# Diff
similar = { version = "2.6", features = ["inline", "unicode"] }

# Highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
streaming-iterator = "0.1"
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
# tree-sitter-toml = { version = "0.20", optional = true }  # incompatible with tree-sitter 0.24
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-bash = { version = "0.23", optional = true }

# Persistence
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Fuzzy matching
nucleo-matcher = "0.3"
dirs = "6.0.0"
parking_lot = "0.12.5"

# Native git bindings (libgit2)
git2 = "0.20"

# Jujutsu (jj) support
jj-lib = { version = "0.36.0", features = ["git"], optional = true }
chrono = { version = "0.4", optional = true }
pollster = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

[features]
default = ["lang-rust", "lang-typescript", "lang-go", "lang-python", "lang-json", "lang-yaml", "lang-bash", "jj"]
jj = ["dep:jj-lib", "dep:chrono", "dep:pollster", "dep:futures", "dep:tokio"]
lang-rust = ["dep:tree-sitter-rust"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-go = ["dep:tree-sitter-go"]
lang-python = ["dep:tree-sitter-python"]
lang-json = ["dep:tree-sitter-json"]
# lang-toml = ["dep:tree-sitter-toml"]  # incompatible
lang-yaml = ["dep:tree-sitter-yaml"]
lang-bash = ["dep:tree-sitter-bash"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1.8.0"

[[bench]]
name = "diff_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
