[package]
name = "quickdiff"
version = "0.7.8"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "A fast, keyboard-driven terminal diff viewer for git and jj"
repository = "https://github.com/Yeshwanthyk/quickdiff"
keywords = ["git", "diff", "tui", "jujutsu", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# UI
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
shell-words = "1.1"

# Diff
similar = { version = "2.6", features = ["inline", "unicode"] }

# Highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
streaming-iterator = "0.1"
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
# tree-sitter-toml = { version = "0.20", optional = true }  # incompatible with tree-sitter 0.24
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-bash = { version = "0.23", optional = true }

# Persistence
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Fuzzy matching
nucleo-matcher = "0.3"
dirs = "6.0.0"
parking_lot = "0.12.5"

# Native git bindings (libgit2)
git2 = "0.20"

# Jujutsu (jj) support
jj-lib = { version = "0.36.0", features = ["git"], optional = true }
chrono = { version = "0.4", optional = true }
pollster = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints.rust]
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
disallowed_script_idents = "deny"
doc_broken_link = "deny"
doc_link_with_quotes = "deny"
get_unwrap = "deny"
let_underscore_must_use = "deny"
match_wild_err_arm = "deny"
mem_forget = "deny"
missing_safety_doc = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unreachable = "deny"
unused_result_ok = "deny"
unwrap_in_result = "deny"
wildcard_dependencies = "deny"
wildcard_imports = "deny"

[features]
default = ["lang-rust", "lang-typescript", "lang-go", "lang-python", "lang-json", "lang-yaml", "lang-bash", "jj"]
jj = ["dep:jj-lib", "dep:chrono", "dep:pollster", "dep:futures", "dep:tokio"]
lang-rust = ["dep:tree-sitter-rust"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-go = ["dep:tree-sitter-go"]
lang-python = ["dep:tree-sitter-python"]
lang-json = ["dep:tree-sitter-json"]
# lang-toml = ["dep:tree-sitter-toml"]  # incompatible
lang-yaml = ["dep:tree-sitter-yaml"]
lang-bash = ["dep:tree-sitter-bash"]

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
proptest = "1.8.0"

[[bench]]
name = "diff_bench"
harness = false

[[bench]]
name = "highlight_bench"
harness = false

[[bench]]
name = "render_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
